# hatake

./: .gitignore  README.md  index.html  mise.toml  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.tsx  api.ts  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  docker.rs  error.rs  k8s.rs  lib.rs  logs.rs  main.rs  rd.rs
src/components/: ui.tsx
src/i18n/: en.ts  index.tsx  ja.ts
src/lib/: compose.ts  demo.ts  format.ts  mock.ts  useFetch.ts
src/views/: ContainerDetail.tsx  Containers.tsx  Dashboard.tsx  Images.tsx  Kubernetes.tsx  Projects.tsx  Settings.tsx
